<resources>
    <string name="app_name">SPID-PAY</string>
    <string name="mobileno">Mobile Number</string>
    <string name="mobileno1">Mobile Number:</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email">Email-id</string>
    <string name="email1">Email-id:</string>
    <string name="submit">Submit</string>
    <string name="otp">OTP</string>
    <string name="dmt">DMT</string>
    <string name="Aeps">Aeps</string>
    <string name="mAtm">mATM</string>
    <string name="spidpaybasetext">One Platform, Many Services</string>
    <string name="Empty_String"> </string>
    <string name="splashtxt">Spidpay provides wide range of banking and financial service that enable you to fulfill all your customer\'s requirement</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="welcomescreentext1">Planning for your</string>
    <string name="welcomescreentext2">next travel?</string>
    <string name="welcomescreentext3">You can now book tickets</string>
    <string name="welcomescreentext4">at your nearest</string>
    <string name="welcomescreentext8">Spidpay outlet</string>
    <string name="welcomescreentext5">No more standing</string>
    <string name="welcomescreentext6">in long queues</string>
    <string name="welcomescreentext7">"Now you can pay utility bills at "</string>
    <string name="welcomescreentext9">Now you can provide</string>
    <string name="welcomescreentext10">banking services</string>
    <string name="welcomescreentext11">at your locality</string>
    <string name="dashboard_welcome">Get Started</string>
    <string name="dashboard_txt1">Sign in to continue</string>
    <string name="dashboard_txt2">Sign in with mobile number</string>
    <string name="dashboard_txt3">By siging in, you accept our Terms and Condition</string>
    <string name="signup_txt">If you are a new user SignUp to Create your account</string>
    <string name="txtcontinue">Continue</string>
    <string name="otptxt">OTP will be sent to this mobile number</string>
    <string name="verfication">Verification</string>
    <string name="verficationtxt">Insert your code here:</string>
    <string name="verficationtxt2">Resent code</string>
    <string name="verficationtxt3">Change Number</string>
    <string name="signup">SignUp</string>
    <string name="signup_txt2">Already have an account? Log in</string>
    <string name="dashboard_txt5">Sign Up for free</string>
    <string name="welcome">Welcome</string>
    <string name="featured">Featured Services</string>
    <string name="otherservice">Other Services</string>
    <string name="profile">Profile</string>
    <string name="termsncondtion"><![CDATA[Terms & Condition]]></string>
    <string name="changepassword">Change Password</string>
    <string name="support">Support</string>
    <string name="setting">Setting</string>
    <string name="report">Report</string>
    <string name="commisionstructure">Commission Structure</string>
    <string name="mynetwork">My Network</string>
    <string name="logout">Logout</string>
    <string name="image">TODO</string>
    <string name="welcomescreentext12">DMT | AEPS | MATM</string>
    <string name="forgotpassword_txt">Forgot Password?</string>
    <string name="title_activity_host">HostActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="productonBoarding">Product OnBoarding</string>
    <string name="myrequest">My Request</string>
    <string name="bydevice">Buy Device</string>
    <string name="language">Language</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="oldpassword">Old Password</string>
    <string name="newpassword">New Password</string>
    <string name="addmoney">Add Money</string>
    <string name="viewalltransaction">View all Transactions</string>
    <string name="alltransaction">All Transactions</string>
    <string name="requestwallettransafer">Request Wallet Transfer</string>
    <string name="setlowbalance">Set low balance alert</string>
    <string name="transfertospidwallet">Transfer to Spid wallet</string>
    <string name="tranfertobank">Transfer to Bank</string>
    <string name="viewtransction">View Transaction</string>
    <string name="prefoption">Choose your preferred option</string>
    <string name="online">Online</string>
    <string name="usingpaymentgetway">Using Payment Getway</string>
    <string name="cashdeposit">Cash Deposit</string>
    <string name="requiredvalidation">Requires the Validation of upload transaction slip</string>
    <string name="available_balance">Available Trade Balance</string>
    <string name="available_sp_balance"> Available SpidWallet Balance</string>
    <string name="enteramount">Enter Amount</string>
    <string name="enter_transfer_amount">Enter Transfer Amount</string>
    <string name="proceed">Proceed</string>
    <string name="moneyaddedtowallet">Money will be added to Wallet</string>
    <string name="selectbank">Select Bank</string>
    <string name="bankrefid">Bank Ref ID</string>
    <string name="selecttrasctiontype">Select Transaction type</string>
    <string name="uploadreciept">Upload Receipt</string>
    <string name="reqestmoney">Request Money</string>
    <string name="home">Home</string>
    <string name="commission">Commision</string>
    <string name="Notification">Notification</string>
    <string name="history">History</string>
    <string name="parentname">Parent Name</string>
    <string name="immediateparent">Immediate Parent</string>
    <string name="spidpaywalletname">SpidPay /WhiteLabel Name</string>
    <string name="requiredconsentfromparent">Requires consent from parent users</string>
    <string name="transfer">Transfer</string>
    <string name="lowbalancemsg">Enter the amont so that  when the wallet balance goes below this, notification will be sent</string>
    <string name="lowbalancemsg2">Set Low balance alert</string>
    <string name="setalert">Set Alert</string>
    <string name="transfertowallet">Transfer to Wallet</string>
    <string name="transfermsg">"Enter the amount you want to transfer to spidpay wallet "</string>
    <string name="transfertobank">Transfer to Bank</string>
    <string name="bankalertmsg">"Entered the amount you want to transfer to Bank A/c 123456"</string>
    <string name="contactdetail">Contact Details</string>
    <string name="address">Address</string>
    <string name="kycdetail">KYC Deatils</string>
    <string name="companydeatil">Company Details</string>
    <string name="bankdetail">Bank Deatils</string>
    <string name="myprofile">My Profile</string>
    <string name="indiacountrycode">+91</string>
    <string name="mobilenoerror1">Enter mobile number!</string>
    <string name="mobilenoerror2">Mobile number must be 10 digit!</string>
    <string name="passworderror1">Enter password!</string>
    <string name="passworderror2">Password min length is 8!</string>
    <string name="filedcannotbeblank">Field cannot be blank!</string>
    <string name="notification">Notification</string>
    <string name="requestedmt">Requested Amount:</string>
    <string name="btn_approve">Approve</string>
    <string name="btn_reject">Reject</string>
    <string name="successful">Successful</string>
    <string name="refund">Refund</string>
    <string name="failed">Failed!</string>
    <string name="selecttrasctionperiod">Select transaction period</string>
    <string name="lastmonth">Last Month</string>
    <string name="last3month">Last 3 Month</string>
    <string name="last6month">Last 6 Month</string>
    <string name="lastoneyear">Last 1 Year</string>
    <string name="selectcustomedate">Or Select Custom Date</string>
    <string name="startdate">Start Date</string>
    <string name="selectdevice">Select Device</string>
    <string name="mantra">Mantra</string>
    <string name="morpho">Morpho</string>
    <string name="startech">Startech</string>
    <string name="precision">Precision</string>
    <string name="custphonenumber">Customer Phone Number</string>
    <string name="custphonename">Customer Name</string>
    <string name="aadharnumber">Aadhar Number:</string>
    <string name="aadharnumber_1">Aadhar Number *</string>
    <string name="aepstxt">Before pressing Next button, please read Terms and Condition</string>
    <string name="cashwithdrwal">Cash Withdrwal</string>
    <string name="balanceenquiry">Balance Enquiry</string>
    <string name="ministatement">Mini Statement</string>
    <string name="inrestedfor">Interested for</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="entervalidemail">Enter valid email-id!</string>
    <string name="passwordnotmatch">Password not matching!</string>
    <string name="entermobilenumber">Enter Mobile Number</string>
    <string name="pleaseseletcinterestedfor">Please select Interested for!</string>
    <string name="enterotp">Enter OTP!</string>
    <string name="username">User Name</string>
    <string name="username1">User Name:</string>
    <string name="usertype">User Type:</string>
    <string name="address1">Address Line*</string>
    <string name="address2">Landmark</string>
    <string name="city">City or Village*</string>
    <string name="city1">City or Village:</string>
    <string name="pincode">Pin Code*</string>
    <string name="pincode1">Pin Code:</string>
    <string name="state">State*</string>
    <string name="state1">State:</string>
    <string name="country">Country</string>
    <string name="update">Update</string>
    <string name="updateaddress">Update Address</string>
    <string name="pannumber">Pan Number:</string>
    <string name="pannumber_1">Pan Number *</string>
    <string name="voterid">Voter ID:</string>
    <string name="voterid_1">Voter ID</string>
    <string name="updatekyc">Update KYC</string>
    <string name="accnumber">A/C Number:</string>
    <string name="storename">Store Name:</string>
    <string name="companytype">Company Type:</string>
    <string name="udyohaddhar">Udyog Aadhar:</string>
    <string name="partnershipdeed">Partnership Deed:</string>
    <string name="moa">MOA/AOA:</string>
    <string name="coi">COI:</string>
    <string name="declaration"> Directors Declaration:</string>
    <string name="updatecompanydetail">Update Company Detail</string>
    <string name="gstinnumber">GSTIN Number:</string>
    <string name="accname">A/C Holder Name:</string>
    <string name="bankname">Bank Name:</string>
    <string name="bankname1">Bank Name</string>
    <string name="updatebankdeatil">Update Bank Deatil</string>
    <string name="ifsccode">IFSC Code</string>
    <string name="ifsccode1">IFSC Code:</string>
    <string name="companyname">Company Name</string>
    <string name="balance">Balance</string>
    <string name="requestparent">Request Parent</string>
    <string name="selectoneoptin">Select one option!</string>
    <string name="notes">Notes</string>
    <string name="tenth">10,000</string>
    <string name="twenth">20,000</string>
    <string name="thirty">30,000</string>
    <string name="passworderror3">One capital letter,One number,One spcial character</string>
    <string name="enterproperaccno">Enter valid Account Number!</string>
    <string name="validifsc">Enter Valid IFSC Code!</string>
    <string name="entervalidgstno">Enter Valid GSTIN number!</string>
    <string name="validpan">Enter Valid PAN NUMBER!</string>
    <string name="validaadhar">Enter Valid AADHAR Number!</string>
    <string name="turnongps">Please turn on GPS</string>
    <string name="rechargesuccessfull">Recharge Successfull</string>
</resources>