<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item

            android:id="@+id/profileFragmentTab"
            android:icon="@drawable/calender"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/mynetwork"
            android:title="@string/mynetwork" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/commisionstructure"
            android:title="@string/commisionstructure" />
        <item
            android:icon="@drawable/onboarding"
            android:title="@string/productonBoarding" />
        <item
            android:icon="@drawable/report"
            android:title="@string/report" />

        <item
            android:icon="@drawable/commisionstructure"
            android:title="@string/myrequest" />
        <item
            android:icon="@drawable/buy_device"
            android:title="@string/bydevice" />
    </group>

    <group android:id="@+id/grp2">
        <item
            android:icon="@drawable/user_green"
            android:title="@string/setting" />

        <item
            android:icon="@drawable/support"
            android:title="@string/support" />
        <item
            android:icon="@drawable/commisionstructure"
            android:title="@string/language" />

        <item
            android:id="@+id/changePasswordFragment"
            android:icon="@drawable/user_green"
            android:title="@string/changepassword" />

        <item
            android:icon="@drawable/support"
            android:title="@string/termsncondtion" />

        <item
            android:icon="@drawable/logout"
            android:title="@string/logout" />

    </group>
</menu>