<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profile.profile.MyProfileFragment">

        <TextView
            android:id="@+id/tv_addmoney_preferedoption"
            android:textSize="@dimen/marign20sp"
            android:layout_marginLeft="@dimen/marign20dp"
            android:layout_marginTop="@dimen/marign40dp"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/black"
            android:text="@string/prefoption"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <RadioButton
            android:id="@+id/rb_parentname"
            android:textSize="@dimen/marign20sp"
            android:textColor="@color/black"
            android:text="@string/parentname"
            android:layout_marginTop="@dimen/marign20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="@dimen/marign20dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_addmoney_preferedoption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rb_parentname"
            android:id="@+id/tv_immeddate_parentname"
            android:layout_marginLeft="@dimen/marign40dp"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/add_money_hint_color"
            android:text="@string/immediateparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <RadioButton
            android:id="@+id/rb_speedpaywalletname"
            android:textSize="@dimen/marign20sp"
            android:textColor="@color/black"
            android:text="@string/spidpaywalletname"
            android:layout_marginTop="@dimen/marign20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="@dimen/marign20dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_immeddate_parentname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rb_speedpaywalletname"
            android:id="@+id/tv_addmoney_requiredvalidation"
            android:layout_marginLeft="@dimen/marign40dp"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/add_money_hint_color"
            android:text="@string/requiredconsentfromparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <Button
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/btn_chooseoptionformoney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marign10dp"
            android:layout_marginTop="@dimen/marign20dp"
            android:layout_marginRight="@dimen/marign10dp"
            android:background="@drawable/button_bg_green"
            android:fontFamily="@font/lato"
            android:text="@string/txtcontinue"
            android:textColor="@color/white"
            android:textSize="@dimen/marign18sp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>