<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="@dimen/marign30dp"
    android:paddingBottom="@dimen/marign30dp"
    android:background="@color/wallet_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginLeft="@dimen/marign20dp"
        android:fontFamily="@font/lato_bold"
        android:id="@+id/tv_wallet_addmoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addmoney"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_marginTop="@dimen/marign25dp"
        android:layout_marginLeft="@dimen/marign20dp"
        android:fontFamily="@font/lato_bold"
        android:id="@+id/tv_wallet_viewalltrasaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewalltransaction"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_wallet_addmoney" />


    <TextView
        android:layout_marginTop="@dimen/marign25dp"
        android:layout_marginLeft="@dimen/marign20dp"
        android:fontFamily="@font/lato_bold"
        android:id="@+id/tv_wallet_requestwallet_transfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requestwallettransafer"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_wallet_viewalltrasaction" />



    <TextView
        android:layout_marginTop="@dimen/marign25dp"
        android:layout_marginLeft="@dimen/marign20dp"
        android:fontFamily="@font/lato_bold"
        android:id="@+id/tv_wallet_setlowbalancealert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setlowbalance"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_wallet_requestwallet_transfer" />


</androidx.constraintlayout.widget.ConstraintLayout>