<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:contentDescription="@string/image"
        android:id="@+id/img_welcomebase"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin30dp"
        android:src="@drawable/spidpay_logo"/>


    <TextView
        android:id="@+id/tv_welcomescreen_txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_welcomebase"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin20dp"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:text="@string/welcomescreentext9"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/margin35sp" />

    <TextView
        android:id="@+id/tv_welcomescreentext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_welcomescreen_txt1"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:text="@string/welcomescreentext10"
        android:textColor="@color/light_green"
        android:textSize="@dimen/margin35sp" />

    <TextView
        android:id="@+id/tv_welcomescreentext3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_welcomescreentext2"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:text="@string/welcomescreentext11"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/margin35sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tv_welcomescreentext4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_welcomescreentext3"
        android:layout_marginLeft="@dimen/margin20dp"
        android:layout_marginTop="@dimen/margin25dp"
        android:layout_marginRight="@dimen/margin20dp"
        android:background="@drawable/welcome_round_corner"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:paddingLeft="@dimen/margin10dp"
        android:paddingEnd="@dimen/margin10dp"
        android:paddingTop="@dimen/margin10dp"
        android:paddingBottom="@dimen/margin10dp"
        android:text="@string/welcomescreentext12"
        android:textColor="@color/purple_200"
        android:textSize="22sp">

    </TextView>


    <RelativeLayout
        android:layout_marginBottom="@dimen/margin30dp"
        android:layout_marginTop="@dimen/margin10dp"
        android:layout_marginRight="@dimen/margin10dp"
        android:layout_marginLeft="@dimen/margin10dp"
        android:layout_below="@id/tv_welcomescreentext4"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:src="@drawable/welcome_screen_3"
            android:layout_width="500dp"
            android:layout_height="374dp"
            android:contentDescription="TODO" />
    </RelativeLayout>


</RelativeLayout>